# fastlog

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/alloy-wrapper/: Cargo.toml
crates/alloy-wrapper/src/: signature.rs  util.rs
crates/common/src/: nitro_secure.rs  ordinary_clock.rs
crates/dag/: Cargo.toml
crates/dag/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs  lru_cache.rs
crates/types/src/: configuration.rs  lib.rs  raw_wrapper.rs
dag/: Cargo.toml
dag/src/: lib.rs
docs/template/: config-proposer.yaml
docs/template/config/: config-proposer-1.yaml  config-proposer-2.yaml  config-proposer-3.yaml  config-proposer.yaml
fastlog/: Cargo.toml
fastlog/src/: bench.rs  client.rs  config.rs  network.rs  server.rs  transport.rs
fastlog_core/: Cargo.toml
fastlog_core/src/: authority.rs  base_types.rs  generate_format.rs  messages.rs  serialize.rs
fastlog_core/src/unit_tests/: authority_tests.rs  client_tests.rs
fastlog_core/tests/staged/: fastpay.yaml
proposer/: README.md
proposer/db_sql/src/pg/: pg_client.rs
proposer/node_api/: Cargo.toml
proposer/node_api/src/: config.rs  error.rs
proposer/runer/: Cargo.toml
proposer/runer/src/: handler.rs  lib.rs  main.rs  node_factory.rs  storage.rs
proposer/runer/src/api/: request.rs
proposer/runer/src/cli/: mod.rs  proposer.rs
proposer/runner/: Cargo.toml
proposer/runner/src/: checkpoint_mgr.rs  lib.rs  main.rs  node_factory.rs  proposer.rs
scripts/: aws_plot.py  fabfile.py  init_tee_env.sh
tee_vlc/src/: nitro_clock.rs
(+5 files in other folders)
