[package]
name = "fastlog"
version = "0.1.0"
publish = false
edition = "2018"

[dependencies]
bytes = "0.5.6"
clap = "2.33.3"
env_logger = "0.7.1"
failure = "0.1.8"
futures = "0.3.5"
log = "0.4.11"
net2 = "0.2.34"
serde = { version = "1.0.115", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.57"
structopt = "0.3"
tempfile = "3.2.0"
tokio = { version = "0.2.22", features = ["full"] }

fastlog_core = { path = "../fastlog_core" }

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"
